Fixed topscroll gap issue

--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ body{
   
   margin-bottom: 60px;
   min-height: 297px;
-  margin-top: 0px;
+  margin-top: -2px;
   
   margin: 0 auto;
   padding-bottom: 20px;
